--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,9 @@ form button {
 form button:hover {
     background-color: #218838;
 }
+@media (max-width: 600px) {
+    .servicios {
+        flex-direction: column;
+        align-items: center;
+    }
+}
