--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,9 @@ h1, h2 {
     max-height: 100px;
     object-fit: contain;
 }
-form input, form select, form textarea {
+form input, form select{
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
     margin-bottom: 15px;
     padding: 8px;
